Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  For information on future releases, see ROADMAP.txt.

  After Zope 3.3.0 (trunk only)

    New features

      - Added attribute `permission` to the `browser:menuItems`-directive to
        allow setting a default value for all menu items defined in this
        directive.

      - Added a new interface decorator to zope.interface that allows the
        setting tagged values on an interface at definition time (see
        zope.interface.taggedValue).

      - Added new Decimal field type to zope.schema (and DecimalWidget in
        zope.app.form)

      - Added security declarations for decimal.Decimal objects

      - Added new Time field type to zope.schema

      - IHTTPApplicationRequests emit a new event,
        IHTTPVirtualHostChangedEvent, when virtual host parameters are 
        altered.

      - New Dublin Core property object that allows scalar treatment for
        sequence types. Made it work with both Tuple and List field type.

      - New logger directive for zope.conf allows for configuring loggers
        for specific subsystems with their own level and handlers.

    Restructuring

      - Deprecated directive <zope:localUtility>, replaced by <zope:class>.

      - Removed deprecated directive <zope:defaultLayer>.

      - Removed deprecated argument 'outstream' from ``zope.publisher``
        API, and removed other deprecated code.

      - Removed deprecated aliases:

        * ``UniqueIdUtility`` for ``IntIds``

        * ``ReferenceToPersistent`` for ``KeyReferenceToPersistent``

        * ``zope.app.uniqueid`` for ``zope.app.intid``

        * ``HTTP`` for ``WSGI-HTTP``

        * ``PostmortemDebuggingHTTP`` for ``WSGI-PostmortemDebuggingHTTP``

        * ``PublisherHTTPServer`` for ``PMDBHTTPServer``

        * ``IBrowserIdManager`` for ``IClientIdManager``
